[package]
name = "v8-sys"
version = "0.1.0"
authors = ["Steve Klabnik <steve@steveklabnik.com>", "Ashley Williams <ashley666ashley@gmail.com>"]
description = "Bindings to V8"
license = "MIT"
homepage = "https://github.com/rust-bridge/v8-sys"
repository = "https://github.com/rust-bridge/v8-sys"

build = "build.rs"
links = "v8"

[lib]
name = "v8"
crate-type = ["dylib"]

[build-dependencies]
gcc = "0.3"
